Fix button overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,12 @@ p {
 .fa-small {
     font-size: 16px !important;
 }
+
+.btn-float {
+    /* float: left; */
+    /* margin-right: 20px; */
+    margin: 0;
+    position: absolute;
+    transform: translateX(-50%);
+    transform: translateY(-50%);
+}
